# language_generator

./: .gitignore  Cargo.toml  README.md  compose.yml  config.xml  docker-compose.yml  functions.py  io_functions.py  language_generator.py  max_.py  pending.txt  standalone.py  stda_max.py  stda_windows.py  tlib.py
backend/: .env  Cargo.toml  Dockerfile  README.md  fly.toml
backend/src/: Dockerfile  convert.rs  db.rs  fly.toml  helpers.rs  language.rs  log.rs  main.rs  pattern.rs  random_generators.rs  routes.rs  scopes.rs  simple_generator.rs  text_generator.rs  types.rs  utilities.rs
backend/src/languages/: example.yaml
backend/src/resources/: conversion_table.json  phones.json
backend/src/routes/: get_available_generators.rs  get_generator.rs  get_generator_settings.rs  get_generators.rs  get_random_generator.rs  get_text.rs  mod.rs  post_new_generator.rs  pseudotext.rs  random_generator.rs  random_words.rs  save_generator.rs
backend/src/settings/: alternate.json  default-settings.bak  default-settings.json  pseudochinese.bak  reset-settings.sh
backend/src/static/: index.html
frontend/: README.md  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: app.css  app.html  helpers.ts  loadGenerators.ts  loadSettings.ts  oindex.html  parser.ts  randomGenerator.ts  saveSettings.ts  store.js  types.ts
frontend/src/components/: Button.svelte  CategoriesList.svelte  Category.svelte  CloseButton.svelte  DynamicCloseButton.svelte  Generator.svelte  GeneratorSettings.svelte  IPAPanel.svelte  Information.svelte  LanguageSettings.svelte  Menu.svelte  Modal.svelte  NewGeneratorModal.svelte  Pattern.svelte  PatternsList.svelte  Results.svelte  Settings.svelte  SettingsSelector.svelte  Word.svelte
frontend/src/lib/: env.ts
frontend/src/routes/: +page.svelte
frontend/static/: about.txt
language-generator-front/: index.html  package-lock.json  package.json
language-generator-front/src/: App.svelte  app.css
languages/: languages.json
lingru/: Cargo.toml  README.md
lingru/src/: main.rs
python/: Language.py  Phoneme.py  classes.py  config.py  default.json  functions.py  io_functions.py  io_json.py  paradigm_testing.py  standalone.py  stda_functions.py  stda_windows.py
settings/: config.xml  default.xml  minimalist.xml
src/: default.yaml  example.yaml  generators.rs  grammar.rs  helpers.rs  language.rs  main.rs  phonology.rs  routes.rs  simple_generator.rs  utilities.rs
src/settings/: default.yaml  generator-setup.json
src/static/: index.html
