[package]
name = "language_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
tokio = { version = "1.21.2", features = ["full"] }
