[package]
name = "language_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
bimap = { version = "0.6.2", features = ["serde"] }
chrono = "0.4.22"
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
#angelspeech = { path = "/data/data/com.termux/files/home/Run/angelspeech" }
angelspeech = { path = "/home/tsrodr/Run/angelspeech" }
