[package]
name = "language_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
anyhow = "1.0.102"
bimap = { version = "0.6.2", features = ["serde"] }
chrono = "0.4.22"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
angelspeech = { git = "https://github.com/taernsietr/angelspeech" }
sqlx = { version = "0.8.6", features = ["json", "postgres", "runtime-tokio"] }
dotenvy = "0.15.7"
env_logger = { version = "0.11.10", features = ["auto-color", "humantime", "regex"] }

