[package]
name = "angelspeech-web"
version = "0.1.0"
edition = "2024"
description = "Web api for serving Angelspeech services."
repository = "https://github.com/taernsietr/language_generator"
license = "GPLv3"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
# angelspeech = { git = "https://github.com/taernsietr/angelspeech" }
angelspeech = { path = "/home/tsrodr/git/angelspeech" }
chrono = "0.4.22"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.8.6", features = ["json", "postgres", "runtime-tokio"] }
tokio = { version = "1.21.2", features = ["full"] }

