[package]
name = "lingru"
version = "0.1.0"
authors = ["Thalles Rodrigues <ts.rodr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
